# videorc

./: AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
changelog/: 0.9.12-beta.1.md  0.9.30-beta.1.md
crates/videorc-native-preview-addon/: Cargo.toml
crates/videorc-native-preview-addon/src/: lib.rs
docs/: distribution.md  layout-presets-manual-checklist.md  live-layout-source-ls3plus-plan.md  multistreaming-m0-audit.md  native-4k-media-engine-refactor.md  native-metal-preview-plan.md  oauth-live-smoke.md  obs-acceptance-checklist.md  obs-parity-source-map.md  preview-native-fix.md  preview-recording-parity-slices.md  ui-glass-redesign-acceptance.md  ui-glass-redesign-plan.md  ux-ia-refactor-slices.md  windows-dev-loop.md  windows-port-plan.md
plans/: 015-real-provider-livestream-acceptance.md  018-support-bundle-diagnostics.md  019-windows-v1-follow-through.md  022-full-app-qa-fixes.md  024-preview-polish-grant-resilience.md  025-multi-display-preview.md  026-constant-twitch-audio-sync.md  030-x-native-playback-verification.md  README.md
protocol-fixtures/: high-risk-contracts.json
scripts/: analyze-recording.mjs  build-ffmpeg-macos.sh  build-native-preview-addon.mjs  caption-style-contact-sheet.mjs  changelog-email.mjs  check-macos-release-secrets.mjs  generate-macos-beta-manifest.mjs  measure-av-sync.mjs  notify-discord-release.mjs  obs-side-by-side-acceptance.mjs  perf-idle-probe.mjs  preflight-macos-package.mjs  preview-glue-probe.mjs  preview-lifecycle-probe.mjs  preview-window-probe.mjs  probe-live-audio-controls.mjs  real-source-baseline-app.mjs  sign-macos-local-app.mjs  smoke-backend-single-instance.mjs  smoke-captions-contract.mjs  smoke-captions-live-app.mjs  smoke-dev-app.mjs  smoke-encoder-bridge-app.mjs  smoke-layout-source-loop-app.mjs  (+25 more)
(+310 files in other folders)
